perf(build): AOT-cache the staged CLIs — 319 ms → 123 ms cold start (#99)
* perf(build): AOT-cache the staged CLIs — 319 ms → 123 ms cold start

The CLIs are short-lived and pay full classloading on every invocation.
Measured on `cli.Pcore schedule-next`: ~280 ms wall, of which bare JVM boot is
only ~20 ms. The rest was loading the Scala stdlib, upickle and libsignal (which
drags in kotlin-stdlib and kotlinx-coroutines) from cold.

JEP 483 (Ahead-of-Time Class Loading & Linking, JDK 24+) fixes exactly this: a
training run records what gets loaded and linked, `AOTMode=create` bakes it into
a cache, and the real run maps it in. Measured through the staged launcher,
mean of 12 runs each: 319 ms -> 123 ms, and peak RSS 70 MB -> 50 MB. Output is
byte-identical (same sha1 on `Pcore schedule-next`).

`protocolCore/stageCli` mirrors `transport/stageServer` (sbt-native-packager
still has no sbt-2 build, so staging is by hand): it copies the runtime
classpath into lib/, records one cache per entry point, and writes a launcher
per entry point. It records against the SAME absolute lib/ classpath the
launcher uses — recording against the module classpath instead would invalidate
the cache at runtime and cost the whole speedup while still appearing to work.

Two hazards drove the design, and both are guarded:

  * STDOUT POISONING. A missing, stale or JDK-mismatched cache does NOT fail the
    run — the JVM prints `[error][aot] ...` ON STDOUT, ahead of the program's
    output, and still exits 0. These CLIs emit JSON on stdout (Constitution V)
    and CI's labeling gate greps it, so this would have corrupted the contract
    silently. `-Xlog:disable` is therefore load-bearing, not cosmetic: it is
    what holds stdout to the program's own output whatever state the cache is
    in. Verified both ways — with the cache removed, the launcher still emits
    the identical single clean line.

  * UNSUPPORTED JDK. A JDK without JEP 483 rejects -XX:AOTMode outright
    ("Improperly speci